fix(card): fix the card sizes, title, and price alignment

--- a/packages/portal/src/app/homepage/homepage.component.scss
+++ b/packages/portal/src/app/homepage/homepage.component.scss
@@ -4,6 +4,12 @@
   padding-bottom: 90px;
 }
 
+.mat-mdc-card {
+  height: 500px;
+}
+
+
+
 .stage {
   height: 400px;
   text-align: center;
